Fix "preview" label wrapping down on asset list view
TP: https://contentful.tpondemand.com/entity/14061

--- a/src/stylesheets/layouts/table-pattern.styl
+++ b/src/stylesheets/layouts/table-pattern.styl
@@ -154,7 +154,7 @@ Styleguide table-pattern
 
   /* Modifiers */
   .x--image-cell
-    width: 6%
+    width 120px
 
   .x--large-cell
     width: 21%
